<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/offWhite"
    tools:context=".GameActivity.StartGame_6x6">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button_menu"
                android:onClick="GoToMenu"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:text="@string/game_menu"
                android:textColor="@color/black"
                android:background="@drawable/button_selector"/>
            <View
                android:layout_width="200dp"
                android:layout_height="60dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button_exit"
                android:onClick="GoToExit"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:textAllCaps="false"
                android:text="@string/game_exit"
                android:textColor="@color/black"
                android:background="@drawable/button_selector"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/winner_circle"
                android:background="@drawable/circle"
                android:layout_width="100dp"
                android:visibility="invisible"
                android:layout_height="100dp"/>
            <ImageView
                android:id="@+id/winner_cross"
                android:background="@drawable/cross"
                android:layout_width="100dp"
                android:visibility="invisible"
                android:layout_height="100dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/GameBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/ash"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button1"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginBottom="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button2"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button3"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button4"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button5"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button6"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button7"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginBottom="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button8"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button9"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button10"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button11"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button12"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button13"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginBottom="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button14"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button15"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button16"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button17"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button18"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
        </LinearLayout><LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Button19"
            android:onClick="GameAct"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_bg_1"
            android:layout_marginBottom="5dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Button20"
            android:onClick="GameAct"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_bg_1"
            android:layout_marginStart="5dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Button21"
            android:onClick="GameAct"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_bg_1"
            android:layout_marginStart="5dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Button22"
            android:onClick="GameAct"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_bg_1"
            android:layout_marginStart="5dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Button23"
            android:onClick="GameAct"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_bg_1"
            android:layout_marginStart="5dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Button24"
            android:onClick="GameAct"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_bg_1"
            android:layout_marginStart="5dp"
            />
    </LinearLayout><LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Button25"
            android:onClick="GameAct"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_bg_1"
            android:layout_marginBottom="5dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Button26"
            android:onClick="GameAct"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_bg_1"
            android:layout_marginStart="5dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Button27"
            android:onClick="GameAct"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_bg_1"
            android:layout_marginStart="5dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Button28"
            android:onClick="GameAct"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_bg_1"
            android:layout_marginStart="5dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Button29"
            android:onClick="GameAct"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_bg_1"
            android:layout_marginStart="5dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Button30"
            android:onClick="GameAct"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/button_bg_1"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button31"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button32"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button33"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button34"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button35"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
            />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/Button36"
                android:onClick="GameAct"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/button_bg_1"
                android:layout_marginStart="5dp"
            />
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/Button_turn"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Button_retry"
        android:onClick="LaunchGame"
        android:visibility="invisible"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:textAllCaps="false"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        android:text="@string/game_repeat"
        android:textColor="@color/black"
        android:background="@drawable/button_selector"/>
</androidx.appcompat.widget.LinearLayoutCompat>